--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,40 @@
+certifi==2019.9.11
+chardet==3.0.4
+Click==7.0
+cycler==0.10.0
+Django==2.2
+docopt==0.6.2
 Flask==1.1.1
+flask-paginate==0.5.5
 Flask-Session==0.3.1
+Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.2
+idna==2.8
+itsdangerous==1.1.0
 Jinja2==2.10.3
+kiwisolver==1.1.0
+MarkupSafe==1.1.1
+matplotlib==3.1.2
 mysql==0.0.2
 mysqlclient==1.4.4
+numpy==1.17.4
+pbr==5.1.1
+pipreqs==0.4.9
+pygmaps-enhanced==0.2.0
+PyMySQL==0.9.3
+pyparsing==2.4.5
+python-dateutil==2.8.1
+pytz==2019.1
 requests==2.22.0
 six==1.12.0
+SQLAlchemy==1.3.10
+sqlparse==0.3.0
+stevedore==1.30.0
+urllib3==1.25.6
+virtualenv==16.1.0
+virtualenv-clone==0.4.0
+virtualenvwrapper==4.8.2
+virtualenvwrapper-win==1.2.5
+Werkzeug==0.16.0
 WTForms==2.2.1
+yarg==0.1.9
