--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
+appdirs==1.4.3
+asgiref==3.2.7
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.1
+distlib==0.3.0
+Django==3.0.5
+filelock==3.0.12
 Flask==1.1.1
-Flask-Session==0.3
+Flask-Cors==3.0.8
+Flask-Session==0.3.0
+idna==2.8
+itsdangerous==1.1.0
 Jinja2==2.10.3
+MarkupSafe==1.1.1
 mysql==0.0.2
-mysqlclient==1.4.4
+mysqlclient==1.4.6
+PyMySQL==0.9.3
+pytz==2019.3
 requests==2.22.0
 six==1.12.0
+sqlparse==0.3.1
+urllib3==1.25.9
+virtualenv==20.0.18
+Werkzeug==1.0.1
 WTForms==2.2.1
-PyMySQL==0.9.3
-Flask-Cors==3.0.8
