--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appdirs==1.4.3
 asgiref==3.2.7
 astroid==2.4.1
+bson==0.5.9
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.1
@@ -25,6 +26,7 @@ mysql==0.0.2
 mysqlclient==1.4.6
 pylint==2.5.2
 PyMySQL==0.9.3
+python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
 six==1.12.0
