--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 appdirs==1.4.3
 asgiref==3.2.7
 astroid==2.4.1
+Authlib==0.14.3
 bson==0.5.9
 certifi==2020.4.5.1
+cffi==1.14.0
 chardet==3.0.4
 click==7.1.1
 colorama==0.4.3
+cryptography==2.9.2
 distlib==0.3.0
 Django==3.0.5
 filelock==3.0.12
@@ -25,6 +28,7 @@ marshmallow==3.6.0
 mccabe==0.6.1
 mysql==0.0.2
 mysqlclient==1.4.6
+pycparser==2.20
 pylint==2.5.2
 pymongo==3.10.1
 PyMySQL==0.9.3
