--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ marshmallow==3.6.0
 mccabe==0.6.1
 mysql==0.0.2
 mysqlclient==1.4.6
+passlib=1.7.2
 pycparser==2.20
 pylint==2.5.2
 pymongo==3.10.1
